[metadata]
name = EliteLedPlugin
version = 1.0.0
author = The Device Null
description = Control Tuya LED strips based on Elite Dangerous game events.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any

[options]
packages = find:
install_requires =
    tinytuya>=1.0.0
python_requires = >=3.8

[options.package_data]
* = *.json

[options.extras_require]
dev =
    pytest
    black
